# Corrected spacing to the right of Terms and Conditions/Avis in IE6/7
git-svn-id: https://svn.ircan.gc.ca/svn/wet-boew-gcwu-fegc@101 ef584cfa-36a7-404c-b6be-e8b063e69e19

--- a/trunk/theme-gcwu-fegc/fip-pcim/css/fip-pcim-ie6.css
+++ b/trunk/theme-gcwu-fegc/fip-pcim/css/fip-pcim-ie6.css
@@ -41,7 +41,7 @@
 
 	/** Footer **/
 	#cn-ft-tctr {padding: 7px 0 6px 0;}
-	#cn-ft-tctr li.terms {padding: 0 5px 0 10px;}
+	#cn-ft-tctr li.terms {padding: 0 10px 0 10px;}
 	#cn-ft-tctr li.trans {padding-left: 10px;}
 	#cn-sft-inner .span-1,#cn-sft-inner .span-2,#cn-sft-inner .span-3,#cn-sft-inner .span-4,#cn-sft-inner .span-5,#cn-sft-inner .span-6,#cn-sft-inner .span-7,#cn-sft-inner .span-8,#cn-sft-inner .span-9,#cn-sft-inner .span-10,#cn-sft-inner .span-11,#cn-sft-inner .span-12{margin-right: 9px;}
 	#cn-gcft li {margin: 13px 35px 14px 9px;}
