--- a/trunk/theme-gcwu-fegc/fip-pcim/css/fip-pcim-ie7.css
+++ b/trunk/theme-gcwu-fegc/fip-pcim/css/fip-pcim-ie7.css
@@ -25,14 +25,13 @@
 
 	/** Site nav bar **/
 	#cn-psnb .mb-sm-open {background: url(../images/gradiant.jpg) repeat-x 0 0 #eee;}
-	
-	#cn-cols-inner {position:static;}
+
 	#cn-doc-dates {position:relative; float:right;margin-bottom:-15px;top:10px;}
 	
 	/** Footer **/
 	#cn-ft-tctr {padding: 7px 0 6px 0;}
 	#cn-ft-tctr li {float:left;}
-	#cn-ft-tctr li.terms {padding: 0 5px 0 10px;}
+	#cn-ft-tctr li.terms {padding: 0 10px 0 10px;}
 	#cn-ft-tctr li.trans {padding-left: 10px;}
 	#cn-gcft li {margin: 13px 35px 14px 9px;}
 }
